--- a/package.json
+++ b/package.json
@@ -1,47 +1,42 @@
 {
   "name": "BrainWaves",
   "productName": "BrainWaves",
-  "version": "0.13.0",
+  "version": "0.14.0",
   "description": "EEG Experiment Desktop Application",
   "scripts": {
-    "build": "concurrently \"npm run build-main\" \"npm run build-renderer\"",
-    "build-dll": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.dll.js --colors",
-    "build-main": "cross-env NODE_ENV=production node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --config webpack.config.main.prod.js --colors",
-    "build-renderer": "cross-env NODE_ENV=production node --trace-warnings --max_old_space_size=4096 -r @babel/register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.prod.js --colors",
-    "dev": "cross-env START_HOT=1 node -r @babel/register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 npm run start-renderer-dev",
+    "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
+    "build-dll": "cross-env NODE_ENV=development webpack --config ./configs/webpack.config.renderer.dev.dll.babel.js --colors",
+    "build-e2e": "cross-env E2E_BUILD=true yarn build",
+    "build-main": "cross-env NODE_ENV=production webpack --config ./configs/webpack.config.main.prod.babel.js --colors",
+    "build-renderer": "cross-env NODE_ENV=production webpack --config ./configs/webpack.config.renderer.prod.babel.js --colors",
+    "dev": "cross-env START_HOT=1 node -r @babel/register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 yarn start-renderer-dev",
     "electron-rebuild": "electron-rebuild --parallel --force --types prod,dev,optional --module-dir app",
-    "flow": "flow",
-    "lint": "cross-env NODE_ENV=development eslint --cache .",
-    "lint-fix": "npm run --silent lint -- --fix; exit 0",
-    "lint-styles": "stylelint app/*.css app/components/*.css --syntax scss",
-    "lint-styles-fix": "stylefmt -r app/*.css app/components/*.css",
-    "package": "npm run build && build --publish never",
-    "package-all": "npm run build && build -mwl",
-    "package-linux": "npm run build && build --linux",
-    "package-win": "npm run build && build --win --x64",
-    "package-mac": "npm run build && build --mac --x64",
-    "postinstall": "node -r @babel/register internals/scripts/CheckNativeDep.js && npm run build-dll && electron-builder install-app-deps && node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
-    "postlint-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.js'",
-    "precommit": "lint-staged",
-    "prestart": "npm run build",
-    "start": "cross-env NODE_ENV=production electron ./app/",
-    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r @babel/register ./app/main.dev.js",
-    "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
-    "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings -r @babel/register ./internals/scripts/RunTests.js",
-    "test-all": "npm run lint && npm run flow && npm run build && npm run test && npm run test-e2e",
-    "test-e2e": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings -r @babel/register ./internals/scripts/RunTests.js e2e",
-    "test-watch": "npm test -- --watch"
+    "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
+    "lint-fix": "yarn --silent lint --fix; exit 0",
+    "lint-styles": "stylelint --ignore-path .eslintignore '**/*.*(css|scss)' --syntax scss",
+    "lint-styles-fix": "yarn --silent lint-styles --fix; exit 0",
+    "package": "yarn build && electron-builder build --publish never",
+    "package-all": "yarn build && electron-builder build -mwl",
+    "package-ci": "yarn postinstall && yarn build && electron-builder --publish always",
+    "package-mac": "yarn build && electron-builder build --mac",
+    "package-linux": "yarn build && electron-builder build --linux",
+    "package-win": "yarn build && electron-builder build --win --x64",
+    "postinstall": "node -r @babel/register internals/scripts/CheckNativeDep.js && electron-builder install-app-deps && yarn build-dll && opencollective-postinstall",
+    "postlint-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{js,jsx,json,html,css,less,scss,yml}'",
+    "postlint-styles-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{css,scss}'",
+    "preinstall": "node ./internals/scripts/CheckYarn.js",
+    "prestart": "yarn build",
+    "start": "cross-env NODE_ENV=production electron ./app/main.prod.js",
+    "start-main-dev": "cross-env START_HOT=1 NODE_ENV=development electron -r ./internals/scripts/BabelRegister ./app/main.dev.ts",
+    "start-renderer-dev": "cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.config.renderer.dev.babel.js",
+    "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 jest",
+    "test-all": "yarn lint && yarn tsc && yarn build && yarn test && yarn build-e2e && yarn test-e2e",
+    "test-e2e": "node -r @babel/register ./internals/scripts/CheckBuildsExist.js && cross-env NODE_ENV=test testcafe electron:./app ./test/e2e/HomePage.e2e.ts",
+    "test-e2e-live": "node -r @babel/register ./internals/scripts/CheckBuildsExist.js && cross-env NODE_ENV=test testcafe --live electron:./app ./test/e2e/HomePage.e2e.ts",
+    "test-watch": "yarn test --watch"
   },
-  "resolutions": {
-    "natives": "1.1.3"
-  },
-  "browserslist": [
-    "electron 2.0"
-  ],
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "cross-env NODE_ENV=development eslint --cache"
-    ],
+    "*.{js,jsx,ts,tsx}": ["cross-env NODE_ENV=development eslint --cache"],
     "{*.json,.{babelrc,eslintrc,prettierrc,stylelintrc}}": [
       "prettier --ignore-path .eslintignore --parser json --write"
     ],
@@ -59,33 +54,41 @@
     "files": [
       "dist/",
       "node_modules/",
-      "assets/",
-      "utils/jupyter/utils.py",
       "app.html",
-      "viewer.html",
       "main.prod.js",
       "main.prod.js.map",
       "package.json"
     ],
-    "mac": {
-      "icon": "resources/icon.icns",
-      "target": "pkg"
-    },
-    "win": {
-      "target": [
-        "nsis"
+    "dmg": {
+      "contents": [
+        {
+          "x": 130,
+          "y": 220
+        },
+        {
+          "x": 410,
+          "y": 220,
+          "type": "link",
+          "path": "/Applications"
+        }
       ]
     },
+    "win": {
+      "target": ["nsis", "msi"]
+    },
     "linux": {
-      "target": [
-        "deb",
-        "AppImage"
-      ],
-      "category": "Development"
+      "target": ["deb", "rpm", "AppImage"],
+      "category": "Education"
     },
     "directories": {
       "buildResources": "resources",
       "output": "release"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "electron-react-boilerplate",
+      "repo": "electron-react-boilerplate",
+      "private": false
     }
   },
   "repository": {
@@ -114,11 +117,11 @@
   ],
   "license": "MIT",
   "keywords": [
+    "eeg",
     "electron",
     "boilerplate",
     "react",
     "redux",
-    "flow",
     "sass",
     "webpack",
     "hot",
@@ -126,123 +129,149 @@
   ],
   "homepage": "https://wp.nyu.edu/brainwaves/",
   "jest": {
+    "testURL": "http://localhost/",
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/internals/mocks/fileMock.js",
       "\\.(css|less|sass|scss)$": "identity-obj-proxy"
     },
-    "moduleFileExtensions": [
-      "js"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "app/node_modules"
-    ],
-    "transform": {
-      "^.+\\.js$": "babel-jest"
-    },
-    "setupFiles": [
-      "./internals/scripts/CheckBuiltsExist.js"
-    ]
+    "moduleFileExtensions": ["js", "jsx", "ts", "tsx", "json"],
+    "moduleDirectories": ["node_modules", "app/node_modules"],
+    "setupFiles": ["./internals/scripts/CheckBuildsExist.js"]
   },
   "devDependencies": {
-    "@babel/core": "7.10.2",
-    "@babel/plugin-proposal-class-properties": "7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-proposal-decorators": "^7.10.1",
-    "@babel/plugin-proposal-optional-catch-binding": "^7.10.1",
-    "@babel/plugin-transform-flow-strip-types": "^7.10.1",
-    "@babel/preset-env": "7.10.2",
-    "@babel/preset-flow": "7.10.1",
-    "@babel/preset-react": "7.10.1",
+    "@babel/plugin-proposal-do-expressions": "^7.10.1",
+    "@babel/plugin-proposal-export-default-from": "^7.10.1",
+    "@babel/plugin-proposal-export-namespace-from": "^7.10.1",
+    "@babel/plugin-proposal-function-bind": "^7.10.1",
+    "@babel/plugin-proposal-function-sent": "^7.10.1",
+    "@babel/plugin-proposal-json-strings": "^7.10.1",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.10.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.1",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.1",
+    "@babel/plugin-proposal-pipeline-operator": "^7.10.1",
+    "@babel/plugin-proposal-throw-expressions": "^7.10.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-import-meta": "^7.10.1",
+    "@babel/plugin-transform-react-constant-elements": "^7.10.1",
+    "@babel/plugin-transform-react-inline-elements": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/preset-typescript": "^7.10.1",
     "@babel/register": "^7.10.1",
-    "@nteract/core": "^14.0.0",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "^26.0.1",
-    "babel-loader": "8.1.0",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/history": "^4.7.5",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.7",
+    "@types/react-redux": "^7.1.6",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-test-renderer": "^16.9.2",
+    "@types/redux-logger": "^3.0.7",
+    "@types/sinon": "^7.5.2",
+    "@types/tapable": "^1.0.5",
+    "@types/vfile-message": "^2.0.0",
+    "@types/webpack": "^4.41.3",
+    "@typescript-eslint/eslint-plugin": "^2.17.0",
+    "@typescript-eslint/parser": "^2.17.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.1.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-dev-expression": "^0.2.2",
-    "babel-plugin-flow-runtime": "0.19.0",
-    "chalk": "^4.1.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "browserslist-config-erb": "^0.0.1",
+    "chalk": "^3.0.0",
     "concurrently": "^5.2.0",
-    "cross-env": "^7.0.2",
-    "cross-spawn": "^7.0.3",
-    "css-loader": "^3.6.0",
+    "cross-env": "^7.0.0",
+    "cross-spawn": "^7.0.1",
+    "css-loader": "^3.4.2",
     "detect-port": "^1.3.0",
-    "electron": "^9.0.4",
-    "electron-builder": "^22.7.0",
-    "electron-devtools-installer": "^3.0.0",
-    "electron-rebuild": "^1.11.0",
+    "electron": "7.1.13",
+    "electron-builder": "^22.3.6",
+    "electron-devtools-installer": "^2.2.4",
+    "electron-rebuild": "^1.10.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.5.0",
+    "enzyme-to-json": "^3.4.4",
     "eslint": "^7.2.0",
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-typescript": "^6.3.1",
     "eslint-config-erb": "^0.3.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-plugin-compat": "^3.7.0",
-    "eslint-plugin-flowtype": "^5.1.3",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "eslint-plugin-testcafe": "^0.2.1",
-    "express": "^4.17.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fbjs-scripts": "^1.2.0",
-    "file-loader": "^6.0.0",
-    "flow-bin": "^0.127.0",
-    "flow-runtime": "^0.17.0",
-    "flow-typed": "^3.1.0",
-    "husky": "^4.2.5",
+    "file-loader": "^5.0.2",
+    "husky": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.2.10",
-    "minimist": "^1.2.5",
-    "node-gyp": "^7.0.0",
-    "node-sass": "^4.14.1",
-    "npm-logical-tree": "^1.2.1",
-    "patch-package": "^6.2.2",
-    "prettier": "^2.0.5",
-    "react-test-renderer": "^16.13.1",
+    "jest": "^25.1.0",
+    "lint-staged": "^10.0.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "opencollective-postinstall": "^2.0.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "patch-package": "6.2.2",
+    "prettier": "^1.19.1",
+    "react-test-renderer": "^16.12.0",
     "redux-logger": "^3.0.6",
-    "rimraf": "^3.0.2",
+    "rimraf": "^3.0.0",
     "sass-loader": "^8.0.2",
-    "sinon": "^9.0.2",
-    "spectron": "^11.0.0",
-    "style-loader": "^1.2.1",
-    "stylefmt": "^6.0.3",
-    "stylelint": "^13.6.0",
+    "sinon": "^8.1.1",
+    "spectron": "^10.0.0",
+    "style-loader": "^1.1.3",
+    "stylelint": "^13.0.0",
     "stylelint-config-prettier": "^8.0.1",
-    "stylelint-config-standard": "^20.0.0",
-    "tar-fs": "2.1.0",
-    "uglifyjs-webpack-plugin": "2.2.0",
-    "unbzip2-stream": "1.4.3",
-    "url": "0.11.0",
-    "url-loader": "^4.1.0",
-    "webpack": "4.43.0",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.11.0",
-    "webpack-merge": "4.2.2"
+    "stylelint-config-standard": "^19.0.0",
+    "terser-webpack-plugin": "^2.3.2",
+    "testcafe": "^1.8.0",
+    "testcafe-browser-provider-electron": "^0.0.14",
+    "testcafe-react-selectors": "^4.0.0",
+    "typed-css-modules-webpack-plugin": "^0.1.2",
+    "typescript": "^3.7.5",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2",
+    "yarn": "^1.21.1"
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.10.2",
+    "@babel/runtime": "7.10.2",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@hot-loader/react-dom": "^16.13.0",
     "@nteract/messaging": "^7.0.7",
     "@nteract/transforms": "^4.4.7",
     "ajv": "^6.12.2",
-    "@babel/runtime": "7.10.2",
+    "connected-react-router": "^6.8.0",
+    "core-js": "^3.6.5",
     "d3": "^5.16.0",
     "devtron": "^1.4.0",
     "electron-debug": "^3.1.0",
+    "electron-log": "^4.0.6",
+    "electron-updater": "^4.2.0",
     "font-awesome": "^4.7.0",
     "hazardous": "^0.3.0",
     "history": "^5.0.0",
     "kernelspecs": "^2.0.0",
     "lab.js": "^20.0.1",
-    "lodash": "^4.17.15",
     "lodash.clonedeep": "^4.5.0",
+    "lodash": "^4.17.15",
     "mkdirp": "^1.0.4",
     "moment": "^2.26.0",
     "mousetrap": "^1.6.5",
@@ -250,21 +279,20 @@
     "papaparse": "^5.2.0",
     "plotly.js": "^1.54.2",
     "rc-slider": "^9.3.1",
-    "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21",
+    "react-hot-loader": "^4.12.19",
     "react-plotly.js": "^2.4.0",
     "react-redux": "^7.2.0",
-    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-router": "^5.2.0",
     "react-toastify": "^6.0.5",
+    "react": "^16.13.1",
     "recursive-readdir": "^2.2.2",
-    "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
-    "redux-thunk": "^2.3.0",
-    "rxjs": "^6.5.5",
+    "redux": "^4.0.5",
     "rxjs-compat": "^6.5.5",
+    "rxjs": "^6.5.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "simple-statistics": "^7.1.0",
@@ -277,5 +305,28 @@
     "node": ">=7.x",
     "npm": ">=4.x",
     "yarn": ">=0.21.3"
+  },
+  "browserslist": ["extends browserslist-config-erb"],
+  "prettier": {
+    "overrides": [
+      {
+        "files": [".prettierrc", ".babelrc", ".eslintrc", ".stylelintrc"],
+        "options": {
+          "parser": "json"
+        }
+      }
+    ],
+    "singleQuote": true
+  },
+  "stylelint": {
+    "extends": ["stylelint-config-standard", "stylelint-config-prettier"]
+  },
+  "renovate": {
+    "extends": ["bliss"]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
