--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "strict": true,
     "pretty": true,
     "sourceMap": true,
+    "noImplicitAny": false,
     /* Additional Checks */
     "noUnusedLocals": true,
     "noUnusedParameters": true,
