--- a/package.json
+++ b/package.json
@@ -282,7 +282,6 @@
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.2",
     "electron-updater": "^4.3.1",
-    "font-awesome": "^4.7.0",
     "hazardous": "^0.3.0",
     "history": "^4.7.2",
     "kernelspecs": "^2.0.0",
@@ -326,9 +325,7 @@
     "npm": ">=4.x",
     "yarn": ">=0.21.3"
   },
-  "browserslist": [
-    "extends browserslist-config-erb"
-  ],
+  "browserslist": [],
   "prettier": {
     "overrides": [
       {
