--- a/package.json
+++ b/package.json
@@ -189,7 +189,7 @@
     "@types/history": "^4.7.6",
     "@types/jest": "^26.0.5",
     "@types/node": "12",
-    "@types/react": "^16.9.38",
+    "@types/react": "16.9.38",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
