--- a/package.json
+++ b/package.json
@@ -294,7 +294,7 @@
     "muse-js": "^3.1.0",
     "papaparse": "^5.2.0",
     "plotly.js": "^1.54.2",
-    "rc-slider": "^9.2.4",
+    "rc-slider": "9.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.21",
