--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,10 @@ jobs:
         with:
           node-version: 13
 
+      - name: Increase yarn network timeout
+        run: |
+          yarn config set network-timeout 300000
+
       - name: yarn install
         run: |
           yarn install
