Added glob to babel config

--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-dev-expression": "^0.2.2",
+    "babel-plugin-import-glob": "^2.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "browserslist-config-erb": "^0.0.1",
     "chalk": "^4.1.0",
@@ -311,6 +312,7 @@
     "rxjs-compat": "^6.5.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
+    "set-value": "^3.0.2",
     "simple-statistics": "^7.1.0",
     "simplify-js": "^1.2.4",
     "source-map-support": "^0.5.19",
