--- a/package.json
+++ b/package.json
@@ -251,12 +251,14 @@
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
+    "tar-fs": "2.0.1",
     "terser-webpack-plugin": "^3.0.7",
     "testcafe": "^1.8.8",
     "testcafe-browser-provider-electron": "^0.0.15",
     "testcafe-react-selectors": "^4.0.0",
     "typescript": "^3.9.7",
     "typings-for-css-modules-loader": "^1.7.0",
+    "unbzip2-stream": "1.4.2",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
