--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "BrainWaves",
   "productName": "BrainWaves",
-  "version": "0.14.2",
+  "version": "0.15.0-rc1",
   "description": "EEG Desktop Application",
   "main": "./main.prod.js",
   "type": "module",
