--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brainwaves",
   "productName": "BrainWaves",
-  "version": "0.14.2",
+  "version": "0.15.0-rc3",
   "description": "EEG Experiment Desktop Application",
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
