--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "brainwaves",
   "productName": "BrainWaves",
-  "version": "0.15.1",
   "description": "EEG Experiment Desktop Application",
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
@@ -123,7 +122,7 @@
   "contributors": [
     {
       "name": "Teon L Brooks",
-      "url": "https://teonian.com"
+      "url": "https://teonbrooks.com"
     },
     {
       "name": "Yury Shevchenko",
@@ -143,7 +142,7 @@
     "wasm",
     "lab.js"
   ],
-  "homepage": "https://wp.nyu.edu/brainwaves/",
+  "homepage": "https://github.com/makebrainwaves/BrainWaves/",
   "jest": {
     "testURL": "http://localhost/",
     "moduleNameMapper": {
@@ -293,7 +292,6 @@
     "electron-updater": "^4.3.1",
     "hazardous": "^0.3.0",
     "history": "^4.7.2",
-    "kernelspecs": "^2.0.0",
     "lab.js": "^21.0.0-rc3",
     "lodash": "^4.17.15",
     "lodash.clonedeep": "^4.5.0",
