--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@types/history": "^4.7.6",
     "@types/jest": "^26.0.5",
-    "@types/node": "^18.0.0",
+    "@types/node": "^22.12.0",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
     "@types/react-plotly.js": "^2.6.4",
@@ -166,45 +166,45 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.2",
     "@types/redux-logger": "^3.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
     "@vitejs/plugin-react": "^4.0.0",
     "chalk": "^4.1.0",
     "cross-env": "^7.0.0",
     "electron": "^39.6.1",
-    "electron-builder": "^24.0.0",
+    "electron-builder": "^26.8.1",
     "electron-vite": "^5.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^8.0.0",
-    "eslint-plugin-import": "^2.27.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-prettier": "^4.2.0",
-    "eslint-plugin-react": "^7.33.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.5",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.0.0",
-    "lint-staged": "^13.0.0",
-    "prettier": "^2.0.5",
+    "jest": "^30.2.0",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.8.1",
     "react-test-renderer": "^16.12.0",
     "redux-logger": "^3.0.6",
-    "rimraf": "^3.0.0",
+    "rimraf": "^6.1.3",
     "sass": "^1.50.0",
-    "stylelint": "^14.0.0",
-    "stylelint-config-standard": "^26.0.0",
-    "tar-fs": "2.0.1",
+    "stylelint": "^17.3.0",
+    "stylelint-config-standard": "^40.0.0",
+    "tar-fs": "^2.1.4",
     "typescript": "^5.0.0",
     "unbzip2-stream": "1.4.2",
-    "vite": "^5.0.0"
+    "vite": "^7.3.1"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@neurosity/pipes": "^5.2.1",
-    "@nteract/transforms": "^4.4.7",
+    "@nteract/transforms": "^3.2.0",
     "@reduxjs/toolkit": "^2.11.2",
-    "ajv": "^6.12.2",
+    "ajv": "^8.18.0",
     "caniuse-lite": "^1.0.30001241",
     "connected-react-router": "^6.6.1",
     "d3": "^7.9.0",
@@ -213,7 +213,7 @@
     "electron-updater": "^6.8.3",
     "events": "^3.3.0",
     "history": "^4.7.2",
-    "lab.js": "^21.0.0-rc3",
+    "lab.js": "^20.2.4",
     "lodash": "^4.17.15",
     "mkdirp": "^1.0.4",
     "mousetrap": "^1.6.5",
